Version 5.0.2: 
==============
- Integration einer Update-Prüfung
  Diese ist standardmäßig deaktiviert. Zum Aktivieren dieses Features muss in der ./settings/settings.php die Variable $setUpdatecheck auf true gesetzt werden.
  Auch bei deaktivierter Option kann jederzeit über den Aufruf der check_update.php im Browser eine Prüfung erfolgen.
  Bei aktiviertem Update-Check wird eine entsprechende Info (ganz rechts) in der Navbar angezeigt. Diese ist mit einem Link für weitere Infos (check_update.php) versehen.
- Einbindung von Bootstrap 4 Release
- Überschriften der Modals (Impressum etc.) werden nun an ihrer richtigen Position angezeigt.
  Zudem wurde das "Popup" etwas kleiner gestaltet und die Schrift entsprechend dem "Kleingedruckten" verkleinert.
- Es wurde ein Problem behoben, dass wenn ein Projekt neu hinzugefügt wurde, die Projekt-Details erst am Tag danach angezeigt wurden. 
  Zudem erscheint bei neu hinzugefügten Projekten eine Info, falls noch keine validen Arbeitspakete abgeliefert wurden.
- Pending Credits sind nicht mehr Bestanteil des BOINC-Server Projektes (depreciated) und werden in zukünftigen Versionen entfernt.
- es wurde ein Problem mit der Umstellung Sommer-/Winterzeit behoben (Daylight Savings).
  Durch die Integration von moment.js erfolgt die Anzeige entsprechend der Voreingestellten Zeitzone (bislang bis zum Jahr 2022) incl. evtl. Zeitumstellungen nun automatisch.
  Ein manuelles Anpassen ist somit nicht erforderlich. Dazu muss die Zeitzone in der settings.php ($my_timezone) im Format Kontinent/Stadt (z.B. Europe/Berlin) gesetzt werden.
  Eine Liste möglicher Eintragungen ist hier zu finden: http://php.net/manual/timezones.php
- Die Tooltips bei verkürzten Texten in der tasks.php wurden neu formatiert und die Verzögerung bis zur Darstellung minimiert.
- Die Farbe für die Punkte vom Vortag wurde von blau auf gelb geändert
- Codeanpassungen

geänderte bzw. neu hinzugefügte Dateien:
    - ../changelog.txt
    - ../cronjob/cronjob.php